--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,5 +33,6 @@
     <string name="fb_login_protocol_scheme">fb1189369434765006</string>
 
     <string name="map_api_key">AIzaSyAd4F07hAUNHwjLk5cYBpDC_9k6YIsnTY8</string>
+    <string name="thuoc_la_gi">Thuốc là gì?</string>
 
 </resources>
